--- a/portfolio.html
+++ b/portfolio.html
@@ -879,12 +879,13 @@
         </div>
     </li>
     <li>
-        <h2>Week9: Advanced analytics</h2>
-        <p>Build and embed a chart that uses advanced statistical methods, testing causality
-            or distribution</p>
-        <div>
-            <p>This website is hosted via github pages: https://yigewang0312.github.io/data-science/portfolio.html</p>
-        </div>
+        <h2>Week 8 – Festival of Economics</h2>
+            <p>Produce two charts that support or refute an argument at the Festival of Economics</p>
+            <!-- Set out (not more than 25 words) an argument that someone made.
+            Make two charts that support or refute it. This could be two that support, two that refute, or a
+            mixture.
+            Comment (not more than 25 words) on what you find. -->
+
     </li>
     <li>
         <h2>Week10: Interactivity.</h2>
