--- a/portfolio.html
+++ b/portfolio.html
@@ -886,6 +886,11 @@
             mixture.
             Comment (not more than 25 words) on what you find. -->
 
+            <blockquote>
+                Interest on cryptocurrencies was increased during the lockdown because people were looking for the thrill of betting.
+            </blockquote>
+
+
     </li>
     <li>
         <h2>Week10: Interactivity.</h2>
