--- a/portfolio.html
+++ b/portfolio.html
@@ -887,7 +887,7 @@
         Comment (not more than 25 words) on what you find. -->
 
         <blockquote>
-            Interest on cryptocurrencies was increased during the lockdown because people were looking for the thrill of betting.
+            &#8220; Interest on cryptocurrencies was increased during the lockdown because people were looking for the thrill of betting. &#8221;
         </blockquote>
         <div class="vega-container">
             <div class="vega-canvas"></div>
