week 10 - colab link

--- a/portfolio.html
+++ b/portfolio.html
@@ -1321,6 +1321,10 @@
                     </script>
         </div>
     </li>
+    <li id="week10">
+        <h2>Supervised Machine Learning</h2>
+        <a href="https://colab.research.google.com/drive/1MGzssBfumAbgGkXYYccl5Ib7-jvAaBHd#scrollTo=ZYVMW8fDM-4R">Colab</a>
+    </li>
 </ol>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
