--- a/portfolio.html
+++ b/portfolio.html
@@ -1322,8 +1322,12 @@
         </div>
     </li>
     <li id="week10">
-        <h2>Supervised Machine Learning</h2>
-        <a href="https://colab.research.google.com/drive/1MGzssBfumAbgGkXYYccl5Ib7-jvAaBHd#scrollTo=ZYVMW8fDM-4R">Colab</a>
+        <h2>Week10-11 Supervised Machine Learning</h2>
+        <p>A predictive model of vaccination rate based on republican lean on the USA</p>
+        <figure>
+            <img src="images/model_accuracy.png" alt="republican lean/vaccination regression"/>
+            <figcaption><a href="https://colab.research.google.com/drive/1MGzssBfumAbgGkXYYccl5Ib7-jvAaBHd#scrollTo=ZYVMW8fDM-4R">Colab</a></figcaption>
+        </figure>
     </li>
 </ol>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
