week 11 - Kmeans clustered scatter graph

--- a/portfolio.html
+++ b/portfolio.html
@@ -1330,11 +1330,12 @@
         </figure>
     </li>
     <li id="week11">
-        <h2>Week10-11 Supervised Machine Learning (Part 2)</h2>
+        <h2>Week10-11 Unsupervised Machine Learning (Part 2)</h2>
         <p></p>
         <figure>
-            <img src="images/model_accuracy.png" alt="republican lean/vaccination regression"/>
-            <figcaption>A predictive model of vaccination rate based on republican lean on the USA <a href="https://colab.research.google.com/drive/1MGzssBfumAbgGkXYYccl5Ib7-jvAaBHd#scrollTo=ZYVMW8fDM-4R">Colab</a></figcaption>
+            <img src="images/income_vaxxed_clusters.png" alt="clustered income vaccination rates"/>
+            <figcaption>An unsupervised k-means clustered data of income averages of states vs the vaccination rate <a href="https://colab.research.google.com/drive/1TZnj_mc5HfNgROM33rMWz_BejXkVSGYg#scrollTo=Ht4sTy726_SQ">Colab</a></figcaption>
+        </figure>
     </li>
 </ol>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
