--- a/portfolio.html
+++ b/portfolio.html
@@ -254,7 +254,7 @@
                 </script>
         </div>
     </li>
-    <li class="figure">
+    <li id="week4" class="figure">
         <h2>Week4</h2>
         <p>Created this pie chart using Colab, from OWID covid data</p>
         <div class="undersized-image">
@@ -1037,30 +1037,17 @@
         <p>Produce two charts that use advanced analytics.</p>
         <div class="vega-container">
             <div class="vega-canvas"></div>
-            <div class="vega-caption">Republican Voters and Vaccination Coverage</div>
+            <div class="vega-caption">US States: Democrat Lean vs Vaccination Rates</div>
             <script type="text/data">
             {
               "$schema": "https://vega.github.io/schema/vega/v5.json",
-              "description": "Republican Voters and Vaccination Coverage",
+              "description": "Democrat Voters and Vaccination Coverage",
               "padding": 15,
               "background": "#282828",
               "data": [
                 {
                   "name": "source",
                   "url": "data/states-data.json"
-                },
-                {
-                  "name": "fit",
-                  "source": "source",
-                  "transform": [
-                    {
-                      "type": "regression",
-                      "method": "linear",
-                      "x": "repub",
-                      "y": "vaxxed",
-                      "as": ["u", "v"]
-                    }
-                  ]
                 }
               ],
               "scales": [
@@ -1070,7 +1057,7 @@
                   "round": true,
                   "nice": true,
                   "zero": false,
-                  "domain": {"data": "source", "field": "repub"},
+                  "domain": {"data": "source", "field": "dem"},
                   "range": "width"
                 },
                 {
@@ -1081,12 +1068,6 @@
                   "zero": false,
                   "domain": {"data": "source", "field": "vaxxed"},
                   "range": "height"
-                },
-                {
-                  "name": "color",
-                  "type": "linear",
-                  "domain": {"data": "source", "field": "white"},
-                  "range": ["#5C4033", "#ffffff"]
                 }
               ],
               "axes": [
@@ -1096,7 +1077,7 @@
                   "domain": false,
                   "orient": "bottom",
                   "tickCount": 5,
-                  "title": "% Republican Lean",
+                  "title": "% Democrat Lean",
                   "labelColor": "#ffffff",
                   "labelFontSize": "17",
                   "titleColor": "#ffffff",
@@ -1108,7 +1089,7 @@
                   "domain": false,
                   "orient": "left",
                   "titlePadding": 5,
-                  "title": "% Vaxxed",
+                  "title": "Vaccination Rate",
                   "labelColor": "#ffffff",
                   "labelFontSize": "17",
                   "titleColor": "#ffffff",
@@ -1122,52 +1103,17 @@
                   "from": {"data": "source"},
                   "encode": {
                     "update": {
-                      "x": {"scale": "x", "field": "repub"},
+                      "x": {"scale": "x", "field": "dem"},
                       "y": {"scale": "y", "field": "vaxxed"},
-                      "tooltip": {
-                        "signal": "datum.state + '(' + datum.vaxxed +'%) Lean: ' + format(datum.repub,',.0f') + '%'"
-                      },
                       "shape": {"value": "circle"},
                       "strokeWidth": {"value": 2},
                       "opacity": {"value": 0.8},
                       "size": { "value": 600 },
                       "stroke": {"value": "#ffffff"},
-                      "fill": {"scale": "color", "field": "white"},
+                      "fill": {"value": "#aaa"},
                       "labels": true
                     }
                   }
-                },
-                {
-                  "name": "trend",
-                  "type": "line",
-                  "from": {"data": "fit"},
-                  "encode": {
-                    "enter": {
-                      "x": {"scale": "x", "field": "u"},
-                      "y": {"scale": "y", "field": "v"},
-                      "stroke": {"value": "#88ff88"}
-                    }
-                  }
-                },
-                {
-                  "type": "text",
-                  "from": {"data": "marks"},
-                  "encode": {
-                    "enter": {
-                      "text": {"field": "datum.state"},
-                      "fontSize": {"value": 15},
-                      "fill": {"value": "#999999"}
-                    }
-                  },
-                  "transform": [
-                    {
-                      "type": "label",
-                      "avoidMarks": ["trend"],
-                      "anchor": [ "bottom", "right", "left"],
-                      "offset": [1],
-                      "size": {"signal": "[width + 60, height]"}
-                    }
-                  ]
                 }
               ]
             }
@@ -1176,7 +1122,7 @@
 
         <div class="vega-container">
             <div class="vega-canvas"></div>
-            <div class="vega-caption">Graph 6: Education Level  and Vaccination Coverage</div>
+            <div class="vega-caption">US States: Education Level vs Vaccination Coverage</div>
             <script type="text/data">
                     {
                       "$schema": "https://vega.github.io/schema/vega/v5.json",
@@ -1187,19 +1133,6 @@
                         {
                           "name": "source",
                           "url": "data/states-data.json"
-                        },
-                        {
-                          "name": "fit",
-                          "source": "source",
-                          "transform": [
-                            {
-                              "type": "regression",
-                              "method": "linear",
-                              "x": "degree",
-                              "y": "vaxxed",
-                              "as": ["u", "v"]
-                            }
-                          ]
                         }
                       ],
                       "scales": [
@@ -1220,12 +1153,6 @@
                           "zero": false,
                           "domain": [45,85],
                           "range": "height"
-                        },
-                        {
-                          "name": "color",
-                          "type": "linear",
-                          "domain": {"data": "source", "field": "repub"},
-                          "range": ["#0000ff", "#ff0000"]
                         }
                       ],
                       "axes": [
@@ -1252,7 +1179,7 @@
                           "domain": false,
                           "orient": "left",
                           "titlePadding": 5,
-                          "title": "% Vaxxed",
+                          "title": "Vaccination Rate",
                           "labelColor": "#ffffff",
                           "labelFontSize": "17",
                           "titleColor": "#ffffff",
@@ -1279,42 +1206,10 @@
                               "opacity": {"value": 0.8},
                               "size": { "value": 600 },
                               "stroke": {"value": "#ffffff"},
-                              "fill": {"scale": "color", "field": "repub"},
+                              "fill": {"value": "#aaa"},
                               "labels": true
                             }
                           }
-                        },
-                        {
-                          "name": "trend",
-                          "type": "line",
-                          "from": {"data": "fit"},
-                          "encode": {
-                            "enter": {
-                              "x": {"scale": "x", "field": "u"},
-                              "y": {"scale": "y", "field": "v"},
-                              "stroke": {"value": "#88ff88"}
-                            }
-                          }
-                        },
-                        {
-                          "type": "text",
-                          "from": {"data": "marks"},
-                          "encode": {
-                            "enter": {
-                              "text": {"field": "datum.state"},
-                              "fontSize": {"value": 15},
-                              "fill": {"value": "#999999"}
-                            }
-                          },
-                          "transform": [
-                            {
-                              "type": "label",
-                              "avoidMarks": ["trend"],
-                              "anchor": [ "bottom", "right", "left"],
-                              "offset": [1],
-                              "size": {"signal": "[width + 60, height]"}
-                            }
-                          ]
                         }
                       ]
                     }
