avoid label overlap

--- a/portfolio.html
+++ b/portfolio.html
@@ -260,7 +260,7 @@
         <div class="undersized-image">
             <figure>
                 <img src="images/pie-chart-from-colab.png" alt="pire chart"/>
-                <figcaption># of hospitalizations per country</figcaption>
+                <figcaption># of covid hospitalizations per country</figcaption>
                 <a href="https://colab.research.google.com/drive/1YvwpI5Exj16IWXT2e4pKIyUGiSw3IuyV?usp=sharing" class="source">
                     (See in Colab)
                 </a>
@@ -678,7 +678,8 @@
                                 "ticks":false,
                                 "labelAngle":90,
                                 "labelColor":"#ffffff",
-                                "titleColor":"#ffffff"
+                                "titleColor":"#ffffff",
+                                "labelOverlap": "parity"
                              }
                           },
                           "y": {
@@ -714,7 +715,7 @@
                           "format": {"type": "json", "property": "quarters"}
                        },
                        "title":{
-                          "text": "Gross Domestic Product: Quarter on Quarter growth: CVM SA %",
+                          "text": "GDP: Quarter on Quarter growth: CVM SA %",
                           "subtitleColor":"#ffffff",
                           "anchor":"start",
                           "color":"#ffffff"
@@ -740,7 +741,8 @@
                                 "ticks":false,
                                 "labelAngle":90,
                                 "labelColor":"#ffffff",
-                                "titleColor":"#ffffff"
+                                "titleColor":"#ffffff",
+                                "labelOverlap": "parity"
                              }
                           },
                           "y": {
@@ -802,7 +804,8 @@
                                 "ticks":false,
                                 "labelAngle":90,
                                 "labelColor":"#ffffff",
-                                "titleColor":"#ffffff"
+                                "titleColor":"#ffffff",
+                                "labelOverlap": "parity"
                              }
                           },
                           "y": {
@@ -1033,7 +1036,7 @@
         </div>
     </li>
     <li id="week9">
-        <h2>Week 9 - Advance Analytics</h2>
+        <h2>Week9: Advance Analytics</h2>
         <p>Produce two charts that use advanced analytics.</p>
         <div class="vega-container">
             <div class="vega-canvas"></div>
@@ -1217,7 +1220,7 @@
         </div>
     </li>
     <li id="week10">
-        <h2>Week10-11 Supervised Machine Learning (Part 1)</h2>
+        <h2>Week10-11: Supervised Machine Learning (Part 1)</h2>
         <p></p>
         <figure>
             <img src="images/model_accuracy.png" alt="republican lean/vaccination regression"/>
@@ -1225,7 +1228,7 @@
         </figure>
     </li>
     <li id="week11">
-        <h2>Week10-11 Unsupervised Machine Learning (Part 2)</h2>
+        <h2>Week10-11: Unsupervised Machine Learning (Part 2)</h2>
         <p></p>
         <figure>
             <img src="images/income_vaxxed_clusters.png" alt="clustered income vaccination rates"/>
