Week3 - mobile version

--- a/portfolio.html
+++ b/portfolio.html
@@ -476,7 +476,7 @@
     </li>
     <li id="week4" class="figure">
         <h2>Week4</h2>
-        <p>Created this pie chart using Colab, from OWID covid data</p>
+        <p>Scraped from OWID covid data</p>
         <div class="undersized-image">
             <figure>
                 <img src="images/pie-chart-from-colab.png" alt="pire chart"/>
