colab links style

--- a/portfolio.html
+++ b/portfolio.html
@@ -472,7 +472,7 @@
         </script>
         </div>
 
-        <a href="https://colab.research.google.com/drive/1XKZk-CpcXtjY1XjUJTX6mAGr0eI-sbKL#scrollTo=lGQ0r2_-kFYW">Collab</a>
+        <a href="https://colab.research.google.com/drive/1XKZk-CpcXtjY1XjUJTX6mAGr0eI-sbKL#scrollTo=lGQ0r2_-kFYW">Colab</a>
     </li>
     <li id="week4" class="figure">
         <h2>Week4</h2>
@@ -481,9 +481,7 @@
             <figure>
                 <img src="images/pie-chart-from-colab.png" alt="pire chart"/>
                 <figcaption># of covid hospitalizations per country</figcaption>
-                <a href="https://colab.research.google.com/drive/1YvwpI5Exj16IWXT2e4pKIyUGiSw3IuyV?usp=sharing" class="source">
-                    (See in Colab)
-                </a>
+                <a href="https://colab.research.google.com/drive/1YvwpI5Exj16IWXT2e4pKIyUGiSw3IuyV?usp=sharing" class="source">Colab</a>
             </figure>
 
         </div>
