--- a/portfolio.html
+++ b/portfolio.html
@@ -488,8 +488,12 @@
     </li>
     <li id="week5">
         <h2>Week5: 9 Graphs from ONS</h2>
-        <p>Compiled these economy related charts to period before and during the COVID-19 pandemic</p>
+
         <div class="vega-containers">
+            <div>
+                <p>Compiled these economy related charts<br /> from periods before and during the COVID-19 pandemic</p>
+                <a href="https://colab.research.google.com/drive/1UXYPw8NjQm1_lp-Sx4aFeS13w7idU9oP">Colab</a>
+            </div>
             <div class="vega-container">
                 <div class="vega-canvas"></div>
                 <script type="text/data">
