--- a/project.html
+++ b/project.html
@@ -1333,6 +1333,21 @@
             By identifying key characteristics that contribute to differences in vaccination rates, it is essential that local authorities target against vaccine misinformation, characterised by republican political alignment, as well as cultural factors within the black community. Financial and educational barriers must also be targeted, ensuring people are aware that vaccines are freely available in a country that is often assumed to privately gatekeep all healthcare.
         </p>
     </li>
+    <li class="citations">
+        Data References
+
+        <ol>
+            <li>Covid-19 dataset by our world in data (2022). Available at: https://github.com/owid/covid-19-data</li>
+            <li>CDC Covid Data Tracker. Available at: https://covid.cdc.gov/covid-data-tracker/#datatracker-home</li>
+            <li> World population review, educational attainment by state 2022. Available at: https://worldpopulationreview.com/state-rankings/educational-attainment-by-state</li>
+            <li>
+                World population review, us states by race 2022. Available at: https://worldpopulationreview.com/states/states-by-race</li>
+            <li> U.s. bureau of labor statistics, unemployment rates for states. (2022). Available at: https://www.bls.gov/web/laus/laumstrk.htm
+                Pew research center, party aliation by state. (2021). Available at: https://www.pewresearch.org/religion/religious-landscape-study/compare/party-affiliation/by/state/</li>
+            <li>Kaiser family foundation, population distribution by age (cps). (2020). Available at: https://www.kff.org/other/state-indicator/population-distribution-by-age-cps.</li>
+            <li>Federal reserve economic data, per capita personal income by state, annual. (2021). Available at: https://fred.stlouisfed.org/release/tables?rid=110eid=257197od=</li>
+        </ol>
+    </li>
 </ol>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
