--- a/portfolio.html
+++ b/portfolio.html
@@ -476,14 +476,29 @@
     </li>
     <li id="week4" class="figure">
         <h2>Week4</h2>
-        <p>Scraped from OWID covid data</p>
-        <div class="undersized-image">
-            <figure>
-                <img src="images/pie-chart-from-colab.png" alt="pire chart"/>
-                <figcaption># of covid hospitalizations per country</figcaption>
-                <a href="https://colab.research.google.com/drive/1YvwpI5Exj16IWXT2e4pKIyUGiSw3IuyV?usp=sharing" class="source">Colab</a>
-            </figure>
-
+        <p></p>
+        <div class="vega-container">
+            <div class="vega-caption">Total # of hospitalization per countries</div>
+            <div class="vega-canvas"></div>
+            <script type="text/data">
+            {
+            "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+            "description": "A simple pie chart with embedded data.",
+            "background":"#282828",
+            "data": {
+            "values": [{"country":"United States","count":9845261.0},{"country":"France","count":2227804.0},{"country":"Germany","count":2022443.0},{"country":"Argentina","count":1898676.0},{"country":"Spain","count":1093721.0},{"country":"Italy","count":1085882.0},{"country":"Chile","count":984019.0},{"country":"Other","count":5782645.0}]
+            },
+            "mark": "arc",
+            "encoding": {
+            "theta": {"field": "count", "type": "quantitative"},
+            "color": {"field": "country", "type": "nominal","legend": { "labelColor":"#fff" }},
+            "order": {"field": "count", "type": "quantitative", "sort": "descending" }
+            }
+            }
+            </script>
+        </div>
+        <div>
+            Scraped from OWID covid data, I chose this chart to try out a new chart format while learning how to aggregate data through loops on python
         </div>
     </li>
     <li id="week5">
