--- a/project.html
+++ b/project.html
@@ -596,6 +596,8 @@
                     }
                     </script>
                 </div>
+                <p class="story">Scraped from state income from FRED using pandas read_html() but it has an extra header that I have to remove, was able to remove it by overwriting columns and a dropcolumn and after that I merged the state data with the CDC data for state vaccination coverage</p>
+                <a href="https://colab.research.google.com/drive/1ckgmtUQNMXnnCNcWojBjv5kEIZIQQjVm#scrollTo=MRA2Hn6xmNvl">Colab</a>
             </li>
             <li><strong>Political Alignment</strong>
                 <p>All OLS models, along with most of the FE models, show positive and substantial coefficients for Democratic alignment. The predicted increase in state vaccination coverage by 1% should be between 0.6% and 2.4% on average, depending on how strongly the Democratic Party is represented in the state's population. Similarly, when comparing model 7 and model 9, the Republican alignment coefficient appears substantial, negative, and numerically close to the Democratic alignment coefficient. According to model 9, a 1% rise in the number of Republican residents should cause the state's vaccination coverage to drop by an average of 0.56%..</p>
@@ -877,6 +879,8 @@
                     }
                     </script>
                 </div>
+                <p class="story">Used pandas to scrape the table from Pew Research and then merged with the CDC data for state vaccination coverage </p>
+                <a href="https://colab.research.google.com/drive/1x16jGHavaTqau7-62I1am7iaIxELeSXe?usp=sharing">Colab</a>
             </li>
             <li><strong>Black Population</strong>
                 <p>In all OLS models, the coefficient on the Black population is negative and substantial. A 1% increase in black population should result in a projected 0.24% - 0.37% fall in the state's vaccination coverage. In FE models, it is less significant and occasionally even positive, indicating that the state level fixed effects are mostly responsible for the fluctuation.</p>
@@ -1023,6 +1027,8 @@
                     }
                     </script>
                 </div>
+                <p>This data is downloaded from World Population Review then uploaded to my github because they are using methods to counter scraping (JavaScript generated tables)</p>
+                <a href="https://colab.research.google.com/drive/1EBiZTkZqFleqTZ60Q0ZmyaAi1owmJkeh#scrollTo=tW66oXGJxaEa">Colab</a>
             </li>
             <li><strong>Young Population</strong>
                 <p>In its OLS models, the age coefficient for the age variable of 19 to 34 is negative and significant, meaning that an expected decrease in state vaccination coverage of between 1.25% and 1.71% should result from a 1% increase in the proportion of state population aged between 19 and 34. </p>
@@ -1173,6 +1179,7 @@
                     }
                     </script>
                 </div>
+                <p class="story">Like World Population Review site, it also has countermeasures for direct scraping so I used the same method</p>
             </li>
             <li>
                 <strong>Education Level</strong>
@@ -1324,6 +1331,9 @@
                     }
                     </script>
                 </div>
+
+                <p class="story">This was from the same site as the age data, so I had to download the csv manually and scrape it from my github</p>
+                <a href="https://colab.research.google.com/drive/1TcP77Xr0UUP5kfGebijQPD0pmYRy7dAU#scrollTo=IhxC6jKcwoqD">Colab</a>
             </li>
         </ol>
     </li>
